# svinst

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: coverage.yml  periodic.yml  release.yml
src/: main.rs
testcases/fail/: broken.sv
testcases/pass/: class.sv  def_test.sv  inc.sv  inc_test.sv  intf.sv  pkg.sv  quotes.sv
testcases/pass/multi/: define1.v  define2.v  dut.v  test1.sv
verilog/: test.sv
