[package]
name = "svinst"
version = "0.1.0"
authors = ["sgherbst@gmail.com"]
repository = "https://github.com/sgherbst/svinst"
keywords = ["parser", "verilog", "systemverilog"]
categories = ["parsing"]
license = "MIT"
readme = "README.md"
description = "Determines the modules declared and instantiated in SystemVerilog files, producing a YAML file as output."
edition = "2018"

[dependencies]
sv-parser = "0.7.0"
sv-parser-error = "0.7.0"
sv-parser-syntaxtree = "0.7.0"
structopt = "0.3.14"
enquote = "1.0.3"
